--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: John Doe # your name (or website title) here
-logo: "/images/alek_kundla_headshot.JPG?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
+title: Aleksei C. Kundla
+logo: "/images/alek_kundla_headshot.JPG?raw=true"
+description: >
   Dedicated Computer Science and Engineering Undergraduate at The Ohio State University 
   <br><br>
   Full-Stack Developer with four years of experience across three companies
@@ -8,4 +8,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/akundla/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: UA-000000-0
